--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ packages = [
 python = "^3.10"
 lxml = "^5.3.0"
 click = "^8.1.7"
+loguru = "^0.7.2"
+openpyxl = "^3.1.5"
+requests = "^2.32.3"
+pandas = "^2.2.3"
+tqdm = "^4.66.5"
 
 
 [tool.poetry.group.dev.dependencies]
