--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ openpyxl = "^3.1.5"
 requests = "^2.32.3"
 pandas = "^2.2.3"
 tqdm = "^4.66.5"
+pyyaml = "^6.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
