--- a/pdc/eov_to_keywords.yaml
+++ b/pdc/eov_to_keywords.yaml
@@ -67,6 +67,8 @@ fishAbundanceAndDistribution:
   - "Arctic Cod"
   - "Fish larvae"
 marineTurtlesBirdsMammalsAbundanceAndDistribution:
+  - "Seals"
+  - "Marine mammals"
 hardCoralCoverAndComposition:
   - "Corals"
 seagrassCoverAndComposition:
