--- a/pdc/eov_to_keywords.yaml
+++ b/pdc/eov_to_keywords.yaml
@@ -64,6 +64,7 @@ zooplanktonBiomassAndDiversity:
 fishAbundanceAndDistribution:
   - "Fishes"
   - "Arctic Cod"
+  - "Arctic cod"
   - "Fish larvae"
 marineTurtlesBirdsMammalsAbundanceAndDistribution:
   - "Seals"
