--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ PyYAML = "^6.0.2"
 requests = "^2.32.3"
 tabulate = "^0.9.0"
 tqdm = "^4.66.5"
+python-dotenv = "^1.1.0"
+boto3 = "^1.38.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
