add benthic invertebrate and marine debris keywords to eov_to_keywords.yaml

--- a/pdc/eov_to_keywords.yaml
+++ b/pdc/eov_to_keywords.yaml
@@ -82,3 +82,8 @@ oceanColour:
   - "Fluorescence"
   - "Chlorophyll"
 oceanSound:
+benthicInvertebrateAbundanceAndDistribution:
+  - "Benthic surveys"
+  - "Benthos"
+marineDebris:
+  - "Plastics"
