add additional keywords for ocean surface heat flux, nutrients, particulate matter, and dissolved organic carbon

--- a/pdc/eov_to_keywords.yaml
+++ b/pdc/eov_to_keywords.yaml
@@ -27,12 +27,15 @@ subSurfaceSalinity:
   - "CTD profiles"
   - "Conductivity"
 oceanSurfaceHeatFlux:
+  - "Solar radiation"
+  - "Photosynthetically available radiation (PAR)"
 oceanBottomPressure:
 turbulentDiapycnalFluxes:
 oxygen:
   - "Oxygen"
 nutrients:
   - "Nitrogen"
+  - "Nutrients"
 inorganicCarbon:
   - "Particulate organic carbon"
   - "Carbon fluxes"
@@ -49,11 +52,13 @@ transientTracers:
   - "Perfluoro contaminants"
 particulateMatter:
   - "Transmittance"
+  - "Sediment fluxes"
 nitrousOxide:
 stableCarbonIsotopes:
 dissolvedOrganicCarbon:
   - "Dissolved organic carbon (DOC)"
   - "Organic carbon"
+  - "Colored dissolved organic material (CDOM)"
 phytoplanktonBiomassAndDiversity:
   - "Chlorophyll"
   - "Phytoplankton"
